<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="#EAEAEA"
    android:divider="@drawable/ic_launcher_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/topTextView"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/first_android_project"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/topEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Edit"
        android:inputType="textPersonName" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:context=".MainActivity">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:text="@string/Switch"
            android:textColor="#085025"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/Switch"
            android:textColor="#085025"
            tools:ignore="UseSwitchCompatOrMaterialXml" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:context=".MainActivity">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:buttonTint="#E42525"
            android:text="@string/check"
            android:textSize="12sp"
            android:textStyle="bold" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:buttonTint="#2540C8"
            android:text="@string/check"
            android:textSize="12sp"
            android:textStyle="bold" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:buttonTint="#3DBC1A"
            android:text="@string/check"
            android:textSize="12sp"
            android:textStyle="bold" />


    </LinearLayout>


    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginHorizontal="100dp"
        android:textOff="@string/off"
        android:textOn="@string/on" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:text="Кнопка" />


</LinearLayout>